SFDC Automation/src/objects/External_Lead_Cross_Check__c.object
<CustomObject>
    <fields>
        <fullName>AlreadyConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlreadyConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDM_CODE__c</fullName>
        <label>BDM CODE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_NAME__c</fullName>
        <label>BDM NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL_DATE__c</fullName>
        <label>CALL DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISPOSITION_CODE__c</fullName>
        <label>DISPOSITION CODE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Date__c</fullName>
        <label>Download Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXTRACT_NAME__c</fullName>
        <label>EXTRACT NAME</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IgnoreInCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IgnoreInCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>LeadSource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Lead_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Lead Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Desc__c</fullName>
        <label>Queue Desc</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VEHICLE_CNT__c</fullName>
        <label>VEHICLE CNT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>External Lead Cross Check</label>
    <nameField>
        <label>External Ref Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Lead Cross Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>